[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmtokens"
version = "0.1.0"
description = "Count tokens, lines, words, characters, and bytes in text using HuggingFace tokenizers"
authors = [
    {name = "Stanislav Lukyanov", email = "stanlukyanov@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "huggingface_hub",
    "tokenizers",
    "jinja2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/slukyano/llmtokens"
Repository = "https://github.com/slukyano/llmtokens"
Issues = "https://github.com/slukyano/llmtokens/issues"

[project.scripts]
llmtokens = "llmtokens.cli:main"
