[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmtokens"
version = "0.1.1"
description = "Count tokens and explore chat templates using HuggingFace tokenizers or OpenAI tiktoken"
authors = [
    {name = "Stanislav Lukyanov", email = "stanlukyanov@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "huggingface_hub",
    "tokenizers",
    "jinja2",
    "tiktoken",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/slukyano/llmtokens"
Repository = "https://github.com/slukyano/llmtokens"
Issues = "https://github.com/slukyano/llmtokens/issues"

[project.scripts]
llmtokens = "llmtokens.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
